[package]
name = "browser"
version = "0.1.0"
authors = ["taochunyu <tao_chunyu@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
document = { path = "../document" }
renderer = { path = "../renderer" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'console',
]