[package]
name = "browser"
version = "0.1.0"
authors = ["taochunyu <tao_chunyu@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
document = { path = "../document" }
editor = { path = "../editor" }
renderer = { path = "../renderer" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'KeyboardEvent',
  'Node',
  'Window',
  'Text',
  'console',
  "MutationObserver",
  "MutationRecord",
  "MutationObserverInit",
]